force-app/main/default/objects/Activity/fields/Gmail_CC_Address__c.field-meta.xml
<CustomField>
    <fullName>Gmail_CC_Address__c</fullName>
    <description>CC email addresses from Gmail headers.</description>
    <label>Gmail CC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>