force-app/main/default/objects/Activity/fields/Gmail_Date__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Date__c</fullName>
    <description>Timestamp of the email from Gmail internalDate or Date header.</description>
    <label>Gmail Date</label>
    <type>DateTime</type>
</CustomField>