force-app/main/default/objects/Activity/fields/Gmail_Direction__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Direction__c</fullName>
    <description>Indicates whether the email was incoming (INBOUND) or outgoing (OUTBOUND).</description>
    <label>Gmail Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INBOUND</fullName>
            </value>
            <value>
                <fullName>OUTBOUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>