force-app/main/default/objects/Activity/fields/Gmail_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Gmail_From_Address__c</fullName>
    <description>Sender email address and name from Gmail headers.</description>
    <label>Gmail From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>