force-app/main/default/objects/Activity/fields/Gmail_Has_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Has_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this email contains file attachments.</description>
    <label>Gmail Has Attachments</label>
    <type>Checkbox</type>
</CustomField>