force-app/main/default/objects/Activity/fields/Gmail_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Message_Id__c</fullName>
    <description>Unique ID of the email message in Gmail.</description>
    <externalId>true</externalId>
    <label>Gmail Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>