force-app/main/default/objects/Activity/fields/Gmail_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Snippet__c</fullName>
    <description>Short preview snippet of the email body.</description>
    <label>Gmail Snippet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>