force-app/main/default/objects/Activity/fields/Gmail_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Thread_Id__c</fullName>
    <description>Unique ID of the conversation thread in Gmail.</description>
    <label>Gmail Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>