force-app/main/default/objects/Activity/fields/Gmail_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Gmail_To_Address__c</fullName>
    <description>Recipient email addresses from Gmail headers.</description>
    <label>Gmail To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>