force-app/main/default/objects/Activity/fields/Google_ETag__c.field-meta.xml
<CustomField>
    <fullName>Google_ETag__c</fullName>
    <description>Google ETag identifier for concurrency and version tracking.</description>
    <label>Google ETag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>