force-app/main/default/objects/Activity/fields/Google_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Event_Id__c</fullName>
    <description>External ID representing the Google Calendar Event ID.</description>
    <externalId>true</externalId>
    <label>Google Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>