force-app/main/default/objects/Activity/fields/Google_Meet_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Meet_Link__c</fullName>
    <description>Generated Google Meet conference link for this event.</description>
    <label>Google Meet Link</label>
    <type>Url</type>
</CustomField>