force-app/main/default/objects/Activity/fields/Last_Sync_Source__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Source__c</fullName>
    <description>Identifies whether the last modification originated from Salesforce or Google Calendar (for loop prevention).</description>
    <label>Last Sync Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALESFORCE</fullName>
                <default>true</default>
                <label>SALESFORCE</label>
            </value>
            <value>
                <fullName>GOOGLE</fullName>
            </value>
            <value>
                <fullName>GMAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>